--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@emotion/react": "^11.10.6",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.11.15",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.11.16",
     "@mui/styled-engine-sc": "^5.11.11",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
