--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "styled-components": "^5.3.9",
     "tss-react": "^4.8.2",
     "typescript": "5.0.3"
+  },
+  "devDependencies": {
+    "file-loader": "^6.2.0"
   }
 }
